--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>TEST</h1>
     <div class="class1">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
     <div class="class1">Lorem ipsum dolor sit.</div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    <div>Lorem, ipsum dolor.</div>
 
 </body>
 </html>
